# gst-plugins-vision

./: CMakeLists.txt  README.md
cmake/modules/: FindImpactAcquire.cmake
sys/: CMakeLists.txt
sys/balluff/: CMakeLists.txt  gstimpactacquiresrc.c  gstimpactacquiresrc.h  impactacquirepixelformat.h
